fix bug in subscription